force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/Opp_Line_Discount_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Opp Line Discount Rule</label>
    <pluralLabel>Opp Line Discount Rules</pluralLabel>
</CustomObject>