force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/fields/Allow_Additional_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Allow_Additional_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Additional Discounts</label>
    <type>Checkbox</type>
</CustomField>