force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Opp_Line_Discount_Rule__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Opp Line Discount Rules</relationshipLabel>
    <relationshipName>Opp_Line_Discount_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>