force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>