force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Opp Line Discount Rules</relationshipLabel>
    <relationshipName>Opp_Line_Discount_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>