force-app/main/default/objects/Opp_Line_Discount_Rule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Value__c</columns>
    <columns>Min_Value__c</columns>
    <columns>Max_Value__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Order__c</columns>
    <columns>Allow_Additional_Discounts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>